# NewsDigest-

./: .bumpversion.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SPEC.md  claude.md  newsdigest.spec  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  ruff.toml  step-by-step.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pr.yml  release.yml
config/environments/: .env.development  .env.production  .env.staging  development.yml  production.yml  staging.yml
docker/: Dockerfile  docker-compose.yml
docker/config/: config.yml
docs/: ARCHITECTURE.md  STYLE_GUIDE.md  TECH_STACK.md  USER_STORIES.md  architecture.md  openapi.yaml  postman_collection.json
scripts/: build.bat  build.sh  check.bat  check.sh  package.bat  package.sh  setup.bat  setup.sh  test.bat  test.sh
src/newsdigest/: __init__.py  __main__.py  exceptions.py  version.py
src/newsdigest/analyzers/: __init__.py  base.py  claims.py  emotional.py  filler.py  novelty.py  quotes.py  repetition.py  sources.py  speculation.py
src/newsdigest/api/: __init__.py  app.py  middleware.py  models.py  utils.py
src/newsdigest/api/routes/: __init__.py  compare.py  digest.py  extract.py  health.py
src/newsdigest/cli/: __init__.py  analytics.py  compare.py  digest.py  extract.py  main.py  setup.py  sources.py  stats.py  watch.py
src/newsdigest/config/: __init__.py  environments.py  secrets.py  settings.py
src/newsdigest/core/: __init__.py  article.py  extractor.py  pipeline.py  result.py
src/newsdigest/digest/: __init__.py  clustering.py  dedup.py  generator.py
src/newsdigest/formatters/: __init__.py  base.py  json.py  markdown.py  text.py
src/newsdigest/ingestors/: __init__.py  base.py  rss.py  text.py  url.py
src/newsdigest/integrations/: __init__.py  email.py  newsapi.py  slack.py  telegram.py  twitter.py
src/newsdigest/parsers/: __init__.py  article.py  html.py  metadata.py
src/newsdigest/storage/: __init__.py  analytics.py  base.py  cache.py  database.py
src/newsdigest/utils/: __init__.py  errors.py  http.py  logging.py  metrics.py  monitoring.py  telemetry.py  text.py  validation.py
tests/: __init__.py  conftest.py
tests/acceptance/: __init__.py  test_system_behavior.py  test_user_stories.py
tests/e2e/: __init__.py  test_api_endpoints.py  test_extraction_pipeline.py  test_middleware.py  test_storage.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_analyzers.py  test_digest.py  test_pipeline.py
tests/performance/: __init__.py  test_extraction_performance.py
tests/regression/: __init__.py  test_api_regression.py  test_extraction_regression.py
tests/security/: __init__.py  test_security.py
tests/unit/: __init__.py  test_config.py  test_errors.py  test_extractor.py  test_secrets.py  test_validation.py
tests/unit/test_analyzers/: test_emotional.py  test_filler.py  test_speculation.py
